Well! new modifictions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./media/image/Capture d’écran 2022-10-11 120115.png" alt="logo">
+            <img src="./Media/image/Capture d’écran 2022-10-11 120115.png" alt="logo">
 
         </div>
         <ul>
@@ -23,8 +23,8 @@
         </ul>
     </header>
     <div class="container">
-        <img src="./media/image/Capture d’écran 2022-10-11 120412.png" alt="test" class="left-img">
-        <img src="./media/image/Capture d’écran 2022-10-11 120706.png" alt="test" class="right-img">
+        <img src="./Media/image/Capture d’écran 2022-10-11 120412.png" alt="test" class="left-img">
+        <img src="./Media/image/Capture d’écran 2022-10-11 120706.png" alt="test" class="right-img">
         <p class="p">ARTIST TIME est une peintre d'art, une illustratrice et <br> graveuse. Après avoir travaillé pendant plus de vingt ans <br>dans le monde de l'entreprise.</p>
         <h1 class="title">Artist <p>Time</p> </h1>
     </div>
